amend the controller methd to handle status codes